# orchestrator-b

./: .gitignore  README.md  pyproject.toml
Example Briefs/: 01_requirements_brief.md  02_business_rules_brief.md  03_workflows_brief.md  04_domain_model_brief.md  05_mvp_scope_brief.md  06_acceptance_criteria_brief.md  README.md
configs/: rubric.yaml
configs/prompts/: acceptance_chatgpt.md  acceptance_chatgpt_finalize.md  acceptance_criteria_apply.md  acceptance_criteria_lead.md  acceptance_gemini_cross_review.md  adr_generation_chatgpt.md  architecture_chatgpt_normalize.md  architecture_chatgpt_scoring.md  architecture_gemini.md  architecture_gemini_cross_review.md  business_rules_apply.md  business_rules_lead.md  code_audit_gemini.md  code_task_chatgpt.md  domain_model_apply.md  domain_model_lead.md  mvp_scope_apply.md  mvp_scope_lead.md  requirements_add_only_retry.md  requirements_apply.md  requirements_apply_chatgpt.md  requirements_apply_retry_changelog_only.md  requirements_apply_retry_domain_model_only.md  requirements_apply_retry_fix_gates.md  requirements_apply_retry_requirements_only.md  (+18 more)
schemas/: acceptance_criteria.schema.json  adr.schema.json  architecture_candidates.schema.json  audit_report.schema.json  business_rules.schema.json  domain_model.schema.json  mvp_scope.schema.json  normalized_requirements.schema.json  requirements_review.schema.json  requirements_strict.schema.json  scoring_result.schema.json  workflows.schema.json
scripts/: setup.bat  setup.ps1
src/: main.py  pipeline_architecture.py  pipeline_code.py  pipeline_requirements.py
(+11 files in other folders)
