[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-b"
version = "0.1.0"
description = "Semi-automatic AI orchestration with fixed turns and quality gates"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
orchestrator-b = "src.main:main"

[tool.setuptools]
packages = ["src", "src.adapters", "src.artifacts", "src.gates", "src.utils"]

[tool.ruff]
line-length = 100
